fixing bets being overlapped by other posts in results post

--- a/frontend/src/style/_partial/match.scss
+++ b/frontend/src/style/_partial/match.scss
@@ -132,6 +132,7 @@
     background: #fff;
     border: solid 1px #ccc;
     padding: 3px 5px;
+    z-index: 1;
   }
 
   &:hover {
